[package]
name = "prompt_utils"
version = "0.1.0"
authors = ["Maxwell Nogueira Peixoto <maxwellpxt@gmail.com>"]
edition = "2018"
description = "Utilities for writing custom shell prompts"
license = "MIT"
keywords = ["prompt", "shell"]
categories = ["command-line-interface"]

[dependencies]
bitflags = { version = "^1.3", optional = true }

[features]
env = []
fmt = []
styling = ["bitflags"]
writers = ["styling", "not_styled_writer", "ansi_styled_writer"]
not_styled_writer = ["styling"]
ansi_styled_writer = ["styling"]
