[package]
name = "prompt_utils"
version = "0.1.0"
authors = ["Maxwell Nogueira Peixoto <maxwellpxt@gmail.com>"]
edition = "2018"
description = "Utilities for writing custom shell prompts"
license = "MIT"
keywords = ["prompt", "shell"]
categories = ["command-line-interface"]

[dependencies]
bitflags = { version = "^1.3", optional = true }
dirs = { version = "^4.0", optional = true }
hostname = { version = "^0.3", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", optional = true, features = [
    "errhandlingapi",
    "handleapi",
    "processthreadsapi",
    "securitybaseapi",
    "winbase",
    "winerror",
] }

[target.'cfg(unix)'.dependencies]
users = { version = "^0.11", optional = true, default-features = false }

[features]
env = ["env-access_rights", "env-command_result", "env-path", "env-python", "env-session"]
env-access_rights = ["users", "winapi"]
env-command_result = []
env-path = ["dirs"]
env-python = []
env-session = ["hostname", "users", "winapi"]
fmt = ["fmt-command_result", "fmt-duration", "fmt-path"]
fmt-command_result = ["styling", "env-command_result"]
fmt-duration = []
fmt-path = ["styling"]
styling = ["bitflags"]
writers = ["styling", "not_styled_writer", "ansi_styled_writer"]
not_styled_writer = ["styling"]
ansi_styled_writer = ["styling"]
